minitrace-macro/tests/trace/ui/err/014-optional-value-type-is-ident.rs
use minitrace::trace;

#[trace(name = "a", enter_on_poll = y)]
fn f() {}

fn main() {
    f();
}
